Update of the document and correction of the sources

--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -31,6 +31,21 @@
   year={1971}
 }
 
+@ARTICLE{Furlong1996,
+       author = {{Furlong}, J.~M. and {Newell}, W.~R.},
+        title = "{Total cross section measurement for the metastable ? state in CO}",
+      journal = {Journal of Physics B Atomic Molecular Physics},
+         year = 1996,
+        month = jan,
+       volume = {29},
+       number = {2},
+        pages = {331-338},
+          doi = {10.1088/0953-4075/29/2/020},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996JPhB...29..331F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @book{Singhal2009,
 	title = {Elements of {Space} {Physics}},
 	publisher = {PHI Learning Pvt. Ltd.},
@@ -188,6 +203,20 @@ abstract = {Using photoelectron spectroscopy, we have measured some relative par
   year={1993},
   publisher={American Institute of Physics}
 }
+@ARTICLE{Bretagne1986,
+       author = {{Bretagne}, J. and {Callede}, G. and {Legentil}, M. and {Puech}, V.},
+        title = "{Relativistic electron-beam-produced plasmas. I. Collision cross sections and loss function in argon}",
+      journal = {Journal of Physics D Applied Physics},
+         year = 1986,
+        month = may,
+       volume = {19},
+       number = {5},
+        pages = {761-777},
+          doi = {10.1088/0022-3727/19/5/010},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1986JPhD...19..761B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{Caballero-Lopez2004b,
 	page = {01101},
@@ -2597,20 +2626,6 @@ abstract = {Using photoelectron spectroscopy, we have measured some relative par
 	tags = "Chimie, Dication"
 }
 
-@article{Samson1990b,
-	       author = {{Samson}, James A.~R.},
-        title = "{Proportionality of electron-impact ionization to double photoionization}",
-      journal = {\prl},
-     keywords = {32.80.Fb, 34.80.Kw, Photoionization of atoms and ions, Electron-ion scattering, excitation and ionization},
-         year = 1990,
-        month = dec,
-       volume = {65},
-       number = {23},
-        pages = {2861-2864},
-          doi = {10.1103/PhysRevLett.65.2861},
-       adsurl = {https://ui.adsabs.harvard.edu/abs/1990PhRvL..65.2861S},
-      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
 @article{Masuoka1993b,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1993PhRvA..48.1955M},
@@ -3528,6 +3543,37 @@ abstract = {Using photoelectron spectroscopy, we have measured some relative par
 	tags = "Chimie, N-N2"
 }
 
+@ARTICLE{LeClair1993,
+       author = {{Leclair}, Lance R. and {McConkey}, J.~W.},
+        title = "{Selective detection of O($^{1}$S$_{0}$) following electron impact dissociation of O$_{2}$ and N$_{2}$O using a XeO* conversion technique}",
+      journal = {\jcp},
+     keywords = {Dissociation, Electron Scattering, Metastable State, Molecular Interactions, Oxygen Atoms, Atomic Excitations, Cross Sections, Electron States, Energy Spectra, Kinetic Energy, Nitrous Oxides, Atomic and Molecular Physics},
+         year = 1993,
+        month = sep,
+       volume = {99},
+       number = {6},
+        pages = {4566-4577},
+          doi = {10.1063/1.466056},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1993JChPh..99.4566L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@article{Erdman1987,
+	title = {Excitation of the {OI} (3s {5S0}–3p {5P}; $\lambda$ 7774 \AA) multiplet by electron impact on {O2}},
+	volume = {87},
+	issn = {00219606},
+	url = {http://jcp.aip.org/resource/1/jcpsa6/v87/i8/p4540_s1},
+	doi = {doi:10.1063/1.453696},
+	abstract = {We have measured the absolute cross section value and emission linewidths of the OI (3s5S0–3p5P; λ7774 Å) multiplet excited by electron impact on O2. The 3p5P cross section, which was measured from threshold to 400 eV, is large, with a value of 4.23×10−18 cm2 ±14\% measured at 100 eV, hence this cascade feature constitutes a significant source of excitation for the OI (5S0) state. The multiplet’s emission line widths are highly Doppler broadened in dissociative excitation, and display two distinct kinetic energy distributions. These distributions indicate that both purely repulsive and discrete, bound, excited molecular states which then predissociate are involved in the dissociation process leading to the excitation of OI λ7774 Å. The magnitude of the measured cross section, and the fragment kinetic energy distribution inferred from the observed Doppler broadening both indicate that previous time‐of‐flight studies of the metastable OI (5S0) state require some reinterpretation.},
+	number = {8},
+	urldate = {2012-11-26},
+	journal = {The Journal of Chemical Physics},
+	author = {Erdman, P. W. and Zipf, E. C.},
+	month = oct,
+	year = {1987},
+	pages = {4540--4545},
+}
 @article{Ajello1996,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1996JGR...10118953A},
@@ -6712,7 +6758,50 @@ year = {1993}
 	doi = {10.1029/2001JA001105},
 	tags = "Article_Titan_electrons"
 }
+@techreport{Phelps,
+	title = {Collision cross sections for electrons with atmospheric species.},
+	url = {https://www.osti.gov/biblio/4528832},
+	urldate = {2024-09-12},
+	institution = {Joint Inst. for Lab. Astrophysics, Boulder, CO},
+	author = {Phelps, A. V.},
+	year = {1972},
+}
 
+@article{Dalgarno1999,
+	title = {Electron {Energy} {Deposition} in a {Gas} {Mixture} of {Atomic} and {Molecular} {Hydrogen} and {Helium}},
+	volume = {125},
+	url = {http://adsabs.harvard.edu/abs/1999ApJS..125..237D},
+	abstract = {A detailed discussion is presented of the slowing down of fast electrons
+in a partly ionized gas mixture of H, H2, and He with a
+varying ratio of H to H2 and a fixed fraction of He. The mean
+energies and yields for ionization, electronic excitation, dissociation,
+and vibrational excitation and the heating efficiencies are calculated
+for fractional ionizations from 0 to 0.1. Analytical formulas are
+obtained for many of the parameters.},
+	urldate = {2010-12-08},
+	journal = {The Astrophysical Journal Supplement Series},
+	author = {Dalgarno, A. and Yan, Min and Liu, Weihong},
+	month = nov,
+	year = {1999},
+	keywords = {ATOMIC PROCESSES, ISM: ABUNDANCES, ISM: MOLECULES, X-RAYS: GENERAL},
+	pages = {237--256},
+}
+
+
+@article{Liu2004,
+	title = {Ionization of {Molecular} {Hydrogen}},
+	volume = {614},
+	issn = {0004-637X},
+	url = {http://iopscience.iop.org/0004-637X/614/2/1132/},
+	doi = {10.1086/423890},
+	number = {2},
+	urldate = {2011-05-09},
+	journal = {The Astrophysical Journal},
+	author = {Liu, Xianming and Shemansky, Donald E.},
+	month = oct,
+	year = {2004},
+	pages = {1132--1142},
+}
 @Article{Taylor1980,
 	Adsnote = {Provided by the Smithsonian/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/cgi-bin/nph-bib_query?bibcode=1980JGR....85.7765T&db_key=AST},
@@ -8846,6 +8935,22 @@ ions doublement chargés et transport cinétique des protons}},
 	doi = {10.1002/xrs.837},
 	tags = "Protons, Auger , K-SHELL"
 }
+@ARTICLE{Tanaka1998,
+       author = {{Tanaka}, H. and {Ishikawa}, T. and {Masai}, T. and {Sagara}, T. and {Boesten}, L. and {Takekawa}, M. and {Itikawa}, Y. and {Kimura}, M.},
+        title = "{Elastic collisions of low- to intermediate-energy electrons from carbon dioxide: Experimental and theoretical differential cross sections}",
+      journal = {\pra},
+     keywords = {34.10.+x, 34.80.-i, General theories and models of atomic and molecular collisions and interactions, Electron scattering},
+         year = 1998,
+        month = mar,
+       volume = {57},
+       number = {3},
+        pages = {1798-1808},
+          doi = {10.1103/PhysRevA.57.1798},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998PhRvA..57.1798T},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 
 @article{Hoshino2006,
 	page = {3655-3663},
@@ -8890,6 +8995,73 @@ ADS Bibcode: 1992JPhB...25.2427N},
 	pages = {2427--2431},
 }
 
+
+@article{Ralchenko2008,
+	title = {Electron-impact excitation and ionization cross sections for ground state and excited helium atoms},
+	volume = {94},
+	issn = {0092-640X},
+	url = {http://www.sciencedirect.com/science/article/B6WBB-4S62CDX-1/2/c0af31841e71427c64dfab43c07c3163},
+	doi = {10.1016/j.adt.2007.11.003},
+	abstract = {{\textless}p{\textgreater}{\textless}br/{\textgreater}Comprehensive and critically assessed cross sections for the electron-impact excitation and ionization of ground state and excited helium atoms are presented. All states (atomic terms) with n[less-than-or-equals, slant]4 are treated individually, while the states with n[greater-or-equal, slanted]5 are considered degenerate. For the processes involving transitions to and from n[greater-or-equal, slanted]5 levels, suitable cross section scaling relations are presented. For a large number of transitions, from both ground and excited states, convergent close coupling calculations were performed to achieve a high accuracy of the data. The evaluated/recommended cross section data are presented by analytic fit functions, which preserve the correct asymptotic behavior of the cross sections. The cross sections are also displayed in graphical form.{\textless}/p{\textgreater}},
+	number = {4},
+	urldate = {2011-05-06},
+	journal = {Atomic Data and Nuclear Data Tables},
+	author = {Ralchenko, Yu. and Janev, R.K. and Kato, T. and Fursa, D.V. and Bray, I. and de Heer, F.J.},
+	month = jul,
+	year = {2008},
+	pages = {603--622},
+}
+
+@article{Strickland1989,
+	title = {Deducing composition and incident electron spectra from ground-based auroral optical measurements. {I} - {Theory} and model results. {II} - {A} study of auroral red line processes. {III} - {Variations} in oxygen density},
+	volume = {94},
+	url = {http://adsabs.harvard.edu/abs/1989JGR....9413527S},
+	abstract = {This paper considers the feasibility of deducing the characteristics of 
+precipitating electrons by using selected O I (6300 A, 7774 A, and/or 
+8446 A) and N2(+) (4278 A) emissions observed from the ground. The 
+computational model is described and intensities and selected ratios 
+which are suitable for analyzing such data are presented. Detailed 
+results are presented of a study of the O I 6300 A emission, showing how 
+its intensity varies with composition, time, the low-energy portion of 
+the incident electron spectrum, and the relevant chemical processes. 
+Based on these results, an analysis of ground-based optical data is 
+performed.},
+	urldate = {2012-02-15},
+	journal = {Journal of Geophysical Research},
+	author = {Strickland, D. J. and Meier, R. R. and Hecht, J. H. and Christensen, A. B.},
+	month = oct,
+	year = {1989},
+	keywords = {AURORAL SPECTROSCOPY, ELECTRON EMISSION, ELECTRON PRECIPITATION, GAS DENSITY, INCIDENT RADIATION, LINE SPECTRA, MOLECULAR IONS, NITROGEN IONS, OXYGEN SPECTRA, VISIBLE SPECTRUM},
+	pages = {13527--13539},
+}
+
+@article{Pindzola2007,
+	title = {Double ionization of helium by fast bare ion collisions},
+	volume = {40},
+	issn = {0953-4075},
+	url = {https://dx.doi.org/10.1088/0953-4075/40/10/004},
+	doi = {10.1088/0953-4075/40/10/004},
+	abstract = {A time-dependent close-coupling method is developed to treat the double ionization of helium by fast bare ion collisions. At high incident energies, charge transfer to the projectile is quite small, so that the two-electron wavefunction remains centred on the target, subject to a time-dependent projectile interaction. A multipole expansion of the projectile–atom interaction includes monopole, dipole, quadrupole and octopole terms. Time-dependent close-coupling calculations are carried out for α + He collisions at incident energies greater or equal to 1.0 MeV amu−1. Over 100 coupled channels are needed to obtain total double ionization cross sections that are in good agreement with recent non-perturbative basis-set coupled channels calculations and absolute experimental measurements.},
+	language = {en},
+	number = {10},
+	urldate = {2024-09-12},
+	journal = {Journal of Physics B: Atomic, Molecular and Optical Physics},
+	author = {Pindzola, M. S. and Robicheaux, F. and Colgan, J.},
+	month = apr,
+	year = {2007},
+	pages = {1695},
+}
+
+
+@article{Janev1987,
+	title = {Elementary processes in hydrogen-helium plasmas: cross sections and reaction rate coefficients},
+	shorttitle = {Elementary processes in hydrogen-helium plasmas},
+	url = {https://books.google.com/books?hl=en&lr=&id=9_PuCAAAQBAJ&oi=fnd&pg=PA3&dq=janev+1987&ots=cDElO_cn6M&sig=O2mcd-d2mL9pRQWWGwIXM6B-PfY},
+	urldate = {2023-10-25},
+	author = {Janev, Ratko K. and Langer, William D. and Douglass Jr, E.},
+	year = {2012},
+	note = {Publisher: Springer Science \& Business Media},
+}
 @article{Yoon2008,
 	title = {Cross {Sections} for {Electron} {Collisions} with {Hydrogen} {Molecules}},
 	volume = {37},
@@ -9200,16 +9372,6 @@ the end of 2006.},
 	tags = "CO-CO2, Mars, Magnetosphere"
 }
 
-@article{Tabata2006,
-	page = {375-406},
-	author = {Tabata, Tatsuo and Shirai, Toshizo and Sataka, Masao and Kubo, Hirotaka},
-	title = {Analytic cross sections for electron impact collisions with nitrogen molecules},
-	journal = {Atomic Data and Nuclear Data Tables, Volume 92, Issue 3, p. 375-406.},
-	volume = {92},
-	year = {2006},
-	doi = {10.1016/j.adt.2006.02.002},
-	tags = "Airglow, CrossSection, N-N2"
-}
 
 @phdthesis{Lummerzheim1987,
 	month = {December},
@@ -9300,6 +9462,22 @@ the end of 2006.},
 	tags = "K-SHELL"
 }
 
+@article{Williams1989,
+	title = {Low-energy elastic scattering of electrons from atomic oxygen},
+	volume = {22},
+	issn = {0953-4075},
+	url = {https://dx.doi.org/10.1088/0953-4075/22/21/015},
+	doi = {10.1088/0953-4075/22/21/015},
+	abstract = {Electron scattering from atomic oxygen has been studied at energies from 0.5 to 8.7 eV. Absolute total (elastic plus inelastic) scattering cross sections have been measured by an attenuation method. Differential elastic cross sections from 10 to 150' have been measured with energy analysis of the scattered electrons. The apparatus uses crossed modulated electron and atomic beams with energy selection of the incident electron beam. Absolute cross section values have been determined from the measurement of experimental parameters using the relative gas flow method. A parametrised phaseshift analysis has been made to determine phaseshifts from the measured elastic angular distributions. Integral elastic and momentum transfer cross sections were calculated from those phaseshifts.},
+	language = {en},
+	number = {21},
+	urldate = {2024-09-12},
+	journal = {Journal of Physics B: Atomic, Molecular and Optical Physics},
+	author = {Williams, J. F. and Allen, L. J.},
+	month = nov,
+	year = {1989},
+	pages = {3529},
+}
 @article{Slanger1981b,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1981GeoRL...8..535S},
@@ -10003,7 +10181,71 @@ the end of 2006.},
 	doi = {10.1139/P05-034},
 	tags = "Airglow, A ranger, CrossSection, Atomic O"
 }
+@article{Itikawa1990,
+	title = {Cross {Sections} for {Collisions} of {Electrons} and {Photons} with {Atomic} {Oxygen}},
+	volume = {19},
+	issn = {00472689},
+	url = {http://jpcrd.aip.org/resource/1/jpcrbu/v19/i3/p637_s1?isAuthorized=no},
+	doi = {doi:10.1063/1.555857},
+	abstract = {Data have been compiled on the cross sections for the collisions of electrons and photons with atomic oxygen (O). The processes considered are total scattering, elastic scattering, momentum transfer, excitations of electronic states (including fine structure levels of the ground state), ionization, and electron attachment. The cross‐section data are presented graphically. Energy levels, transition probabilities and some other properties of atomic oxygen are summarized to aid understanding of the collision processes. The literature was surveyed through December 1988, but more recent data, if they are available to the authors, are included also.},
+	number = {3},
+	urldate = {2012-11-26},
+	journal = {Journal of Physical and Chemical Reference Data},
+	author = {Itikawa, Y. and Ichimura, A.},
+	month = may,
+	year = {1990},
+	pages = {637--651},
+}
+@article{Zipf1985,
+	title = {Electron impact excitation of atomic oxygen: {Revised} cross sections},
+	volume = {90},
+	copyright = {Copyright 1985 by the American Geophysical Union.},
+	issn = {2156-2202},
+	shorttitle = {Electron impact excitation of atomic oxygen},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1029/JA090iA11p11087},
+	doi = {10.1029/JA090iA11p11087},
+	abstract = {Revised cross-section values for the excitation of the O I(3s ³S°-2p ³P; λ1304 Å), O I(3d ³D°-2p ³P; λ1027 Å), and O I(3s′ ³D°-2p ³P; λ989 Å) resonance transitions by electron impact on atomic oxygen are presented from threshold to 300 eV. These results are smaller than the excitation cross sections used in some airglow models by a factor of ∼2.8. The revised values are in good agreement with recent quantum-scattering calculations. The downward revision is required by new laboratory studies in which the direct and dissociative cross sections for λ1304 Å excitation were normalized with small probable error to the O and O2 ionization cross sections. The results also reflect new advances in VUV optical calibration techniques. A number of outstanding airglow problems are simplified by these revisions.},
+	language = {en},
+	number = {A11},
+	urldate = {2024-09-12},
+	journal = {Journal of Geophysical Research: Space Physics},
+	author = {Zipf, E. C. and Erdman, P. W.},
+	year = {1985},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/JA090iA11p11087},
+	pages = {11087--11090},
+}
 
+
+
+@article{Lanchester2009,
+	title = {Simultaneous imaging of aurora on small scale in {OI} (777.4 nm) and {N21P} to estimate energy and flux of precipitation},
+	volume = {27},
+	issn = {1432-0576},
+	url = {http://www.ann-geophys.net/27/2881/2009/},
+	doi = {10.5194/angeo-27-2881-2009},
+	number = {7},
+	urldate = {2012-11-26},
+	journal = {Ann. Geophys.},
+	author = {Lanchester, B. S. and Ashrafi, M. and Ivchenko, N.},
+	month = jul,
+	year = {2009},
+	pages = {2881--2891},
+}
+
+
+@article{Julienne1976,
+	title = {Cascade and radiation trapping effects on atmospheric atomic oxygen emission excited by electron impact},
+	volume = {81},
+	issn = {0148-0227},
+	url = {http://www.agu.org/journals/ja/v081/i007/JA081i007p01397/},
+	doi = {10.1029/JA081i007p01397},
+	number = {7},
+	urldate = {2012-11-26},
+	journal = {Journal of Geophysical Research},
+	author = {Julienne, P. S. and Davis, J.},
+	year = {1976},
+	pages = {1397},
+}
 @article{Johnson2005,
 	page = {1071-1072},
 	author = {Johnson, P. V. and McConkey, J. W. and Tayal, S. S. and Kanik, I.},
@@ -10087,7 +10329,50 @@ the end of 2006.},
 	doi = {10.1088/0953-4075/28/7/023},
 	tags = "Atomic O, CrossSection, Electrons"
 }
+@article{Tabata2006,
+	title = {Analytic cross sections for electron impact collisions with nitrogen molecules},
+	volume = {92},
+	url = {http://adsabs.harvard.edu/abs/2006ADNDT..92..375T},
+	abstract = {Cross sections for 74 processes in collisions of electrons with nitrogen
+molecules (N2) and singly ionized nitrogen molecules (N2+)
+have been collected. The literature has been surveyed through the middle
+of 2004. The data sets collected are presented in separate graphs for
+each process. Recommended cross sections are expressed by analytic
+expressions.},
+	urldate = {2011-01-04},
+	journal = {Atomic Data and Nuclear Data Tables},
+	author = {Tabata, Tatsuo and Shirai, Toshizo and Sataka, Masao and Kubo, Hirotaka},
+	month = may,
+	year = {2006},
+	keywords = {\#nosource},
+	pages = {375--406},
+}
+@article{Tabata2012,
+	title = {Erratum to “{Analytic} cross sections for electron impact collisions with nitrogen molecules” [{At}. {Data} {Nucl}. {Data} {Tables} 92 (2006) 375–406]},
+	volume = {98},
+	issn = {0092-640X},
+	url = {https://www.sciencedirect.com/science/article/pii/S0092640X11000489},
+	doi = {10.1016/j.adt.2011.06.002},
+	number = {1},
+	urldate = {2024-09-12},
+	journal = {Atomic Data and Nuclear Data Tables},
+	author = {Tabata, Tatsuo and Shirai, Toshizo and Sataka, Masao and Kubo, Hirotaka},
+	month = jan,
+	year = {2012},
+	pages = {74},
+}
 
+
+@article{Shah1987,
+	title = {Pulsed crossed-beam study of the ionisation of atomic hydrogen by electron impact},
+	volume = {20},
+	doi = {10.1088/0022-3700/20/14/022},
+	journal = {Journal of Physics B Atomic Molecular Physics},
+	author = {Shah, M. B and Elliott, D. S and Gilbody, H. B},
+	month = jul,
+	year = {1987},
+	pages = {3501--3514},
+}
 @article{Hall1998,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...499..475H},
