--- a/paper/appendix/xmlfile.tex
+++ b/paper/appendix/xmlfile.tex
@@ -520,6 +520,15 @@ The recommended data set is not automatically created from the other files right
 
 
 
+\section{The plotting tools}
+\label{autoplottingsystem}
+A set of plotting tools for the database can be found in the directories names ``codepy3''. These tools are coded in python, and use the matplotlib library for plotting. The tools are designed to be used with the database, and are able to plot the cross sections.
+A more detailed description of the tools, their use, and their implementation can be found in the README file in the codepy3 directory as well as the documentation file ``Atmociad\_doc\_v2.pdf''.
+
+The vast majority of the images in the present document are automatically generated using these tools.
+
+
+
 
 
 
