--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -71,13 +71,13 @@ This database, described in the document, is named \textbf{AtMoCiad}, which stan
 
 
 
-In a first chapter (\ref{physics}), we will describe the physics associated with these cross sections, and how to use them correctly. That part will briefly describes the \textit{Aeroplanets} model, which is used to check the dataset; but which is also the first aeronomy model using \textbf{AtMoCiad}.
+The physics associated with these cross sections, and how to use them correctly, is described in the paper accompanying the database (Gronoff et al. 2024). It is also described in the \textit{Aeroplanets} model papers \cite{Gronoff2012,Gronoff2012b} which is used to check the dataset; but which is also the first aeronomy model using \textbf{AtMoCiad}.
 
-In a second chapter (\ref{photoionization}), we will present the data for the ionization, excitation and dissociation by the photons.
+In a first chapter (\ref{photoionization}), we will present the data for the ionization, excitation and dissociation by the photons.
 
-In a third chapter (\ref{electronimpact}), we will present the electron impact cross sections.
+In a second chapter (\ref{electronimpact}), we will present the electron impact cross sections.
 
-In a fourth chapter (\ref{evolution}), we will explain the future improvements of the database (proton impact cross sections\ldots).
+In a third chapter (\ref{evolution}), we will explain the future improvements of the database (proton impact cross sections and hydrogen impact cross-sections\ldots).
 
 
 In the appendixes (\ref{appendixes}), we will describe the technical storage, plotting and web interfacing of the database.
