--- a/paper/Photons.tex
+++ b/paper/Photons.tex
@@ -14,6 +14,7 @@
 \input{../photon/resultat/CO}
 \input{../photon/resultat/N2}
 \input{../photon/resultat/CH4}
+\input{../photon/resultat/Ar}
 \input{../photon/resultat/Al}
 \input{../photon/resultat/Ca}
 \input{../photon/resultat/C}
