--- a/paper/appendix/xmlfile.tex
+++ b/paper/appendix/xmlfile.tex
@@ -527,7 +527,9 @@ A more detailed description of the tools, their use, and their implementation ca
 
 The vast majority of the images in the present document are automatically generated using these tools.
 
+\section{The ASCII files}
 
+Files in ASCII, as computed by Aeroplanets, are located in the directory ASCII. These are compiled from the recommended data, on regular basis (but the database in XML is likely more up-to-date).
 
 
 
