Small modification of the paper to correct a few nomenclature errors

--- a/paper/Photons.tex
+++ b/paper/Photons.tex
@@ -3,7 +3,8 @@
 
 \section*{Introduction}
 
-\nomenclature{AMOP}{Photoionization cross sections database compiled by the AMOP group: \url{http://amop.space.swri.edu/}. }
+
+\nomenclature{AMOP}{Photoionization cross sections database compiled by the AMOP group. The name has now changed into PHIDRATES and is located at \url{http://phidrates.space.swri.edu/}.}
 
 
 
