--- a/paper/atmociad.tex
+++ b/paper/atmociad.tex
@@ -20,7 +20,7 @@
 %\usepackage[latin1]{inputenc}
 %\usepackage{fullpage}
 %\usepackage{pgf}
-\author{Guillaume Gronoff \\ Cyril Simon\\ Jean Lilensten}
+\author{Guillaume Gronoff \\ Cyril Simon Wedlund\\ Jean Lilensten \\ et al.}
 
 \title{The \textbf{AtMoCiad} database}
 \graphicspath{{images/}{../electron/resultat/}{../photon/resultat/}{../proton/resultat/}{../hydrogen/resultat/}}
