Addition of new cross-sections

--- a/paper/atmociad.bib
+++ b/paper/atmociad.bib
@@ -1,3 +1,37 @@
+@ARTICLE{Gkouvelis2024,
+       author = {{Gkouvelis}, Leonardos and {Ak{\i}n}, Can and {Heng}, Kevin},
+        title = "{The quantum yield of O($^{1}$S) in CO$_{2}$ photolysis retrieved from the Martian atmosphere: The quantum yield of O($^{1}$S) in CO$_{2}$ photolysis}",
+      journal = {\aap},
+     keywords = {atomic data, atomic processes, molecular data, Sun: UV radiation, planets and satellites: atmospheres, ultraviolet: planetary systems},
+         year = 2024,
+        month = oct,
+       volume = {690},
+          eid = {A319},
+        pages = {A319},
+          doi = {10.1051/0004-6361/202450588},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2024A&A...690A.319G},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Strickland1983,
+       author = {{Strickland}, D.~J. and {Anderson}, Jr., D.~E.},
+        title = "{Radiation transport effects on the OI 1356-{\r{A}} limb intensity profile in the dayglow}",
+      journal = {\jgr},
+     keywords = {Dayglow, Oxygen Atoms, Oxygen Spectra, Radiation Effects, Solar Activity Effects, Ultraviolet Spectra, Absorption Cross Sections, Atomic Excitations, Electron Impact, Limbs, Luminous Intensity, Photoelectrons},
+         year = 1983,
+        month = nov,
+       volume = {88},
+       number = {A11},
+        pages = {9260-9264},
+          doi = {10.1029/JA088iA11p09260},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1983JGR....88.9260S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @article{Burger2000,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/2000JGR...10527447B},
@@ -8378,7 +8412,7 @@ ions doublement chargés et transport cinétique des protons}},
 	tags = "Radiative-Transfer"
 }
 
-@article{Strickl1999,
+@article{Strickland1999,
 	Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
 	Adsurl = {http://adsabs.harvard.edu/abs/1999JQSRT..62..689S},
 	Keywords = {Earth Atmosphere: Radiative Transfer, Earth Atmosphere: UV Radiation},
